updated with refactoring changes in model.js recipeView.js & controller.js

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="search-results">
         <ul class="results">
           <a href="#5ed6604591c37cdc054bcc13">recipe 1</a>
-          <a href="#5ed6604591c37cdc054bca57" class="">recipe 2</a>
+          <a href="#5ed6604591c37cdc054bca57">recipe 2</a>
           <!-- 
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
