--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <div class="overlay hidden"></div>
     <div class="add-recipe-window hidden">
       <button class="btn--close-modal">&times;</button>
-      <form class="upload">
+      <!-- <form class="upload">
         <div class="upload__column">
           <h3 class="upload__heading">Recipe data</h3>
           <label>Title</label>
@@ -274,7 +274,7 @@
           </svg>
           <span>Upload</span>
         </button>
-      </form>
+      </form> -->
     </div>
   </body>
 </html>
