--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <body>
     <div class="container">
       <header class="header">
-        <img src="src/img/logo.png" alt="Logo" class="header__logo" />
+        <a href="index.html"
+          ><img src="src/img/logo.png" alt="Logo" class="header__logo"
+        /></a>
         <form class="search">
           <input
             type="text"
@@ -34,7 +36,7 @@
           </button>
         </form>
 
-        <nav class="nav">
+        <!-- <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item">
               <button class="nav__btn nav__btn--add-recipe">
@@ -64,7 +66,7 @@
                     </p>
                   </div>
 
-                  <!-- <li class="preview">
+                  <li class="preview">
                     <a class="preview__link" href="#23456">
                       <figure class="preview__fig">
                         <img src="src/img/test-1.jpg" alt="Test" />
@@ -76,12 +78,12 @@
                         <p class="preview__publisher">The Pioneer Woman</p>
                       </div>
                     </a>
-                  </li> -->
+                  </li>
                 </ul>
               </div>
             </li>
           </ul>
-        </nav>
+        </nav> -->
       </header>
 
       <div class="search-results">
